...
            android:paddingStart="10dp"
            android:text="@string/stock"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/soldOutStatus"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.825" />

        <TextView
...
            android:text="@string/sold_out"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addToCart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName"
            app:layout_constraintVertical_bias="0.0" />

        <Button
...
