...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:background="@drawable/input_field"
            android:hint="Please comment any other requests here"
...
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextComment"
            app:layout_constraintVertical_bias="0.461" />

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="55dp"
            android:paddingLeft="16dp"
...
